Got server working

--- a/front/index.html
+++ b/front/index.html
@@ -16,5 +16,6 @@
                 <p>Don't have an account? Sign up here!</p>
             </div>
         </article>
+        <script src="client.js"></script>
     </body>
 </html>
