--- a/front/accountsettings.html
+++ b/front/accountsettings.html
@@ -4,7 +4,7 @@
      
      <meta charset="UTF-8">
     <title>Account Settings</title> //Title is Account Settings
-    <link rel="stylesheet" type="text/css" href="main.css"> //linking to the main.css file, which is the CSS markup for the project.
+    <link rel="stylesheet" type="text/css" href="main.css"> //linking to the main.css file, which is the one of the CSS markup for the project.
     </head>
         
      <body>
