--- a/front/account.html
+++ b/front/account.html
@@ -2,7 +2,7 @@
 /**
 * This is the Account page, containing a navigation bar at the bottom to go to the Newsfeed and Database of the application.
 *
-* @author  Matt Bishun, Jack Hickman
+* @author  Matt Bishun, Jack Hickman, up767436
 * @version 1.0
 * @since   2018-03-10 
 */
@@ -45,7 +45,7 @@
         
 <!--       // Navigation Bar created. -->
         <nav id="navBar" class="grid-container">
-            <a href="account.html" class="grid-item">My Account</a>
+            <a href="account.html" class="active">My Account</a>
             <a href="news.html" class="grid-item">News</a>
             <a href="database.html" class="grid-item">Database</a>
         </nav>
