--- a/front/news.html
+++ b/front/news.html
@@ -10,5 +10,40 @@
             <a href="news.html" class="grid-item">News</a>
             <a href="database.html" class="grid-item">Database</a>
         </nav>
+        /* UP767436 Adds the blue line seperator, also makes room for the search box. */
+        <header class="grid-container" style="border-bottom: 5px solid blue">
+        <br>
+            /* UP767436 Creates search box by using a placeholder for text. */
+            <div>            <input type="text" placeholder="Search..">
+            </div>
+            </header>
+             <article>
+<!--            //Up767436 Example text of how the newsfeed could work-->
+            <div class="vis">
+                <p>The Bentley Bentayga may mark a whole new direction for the British brand, but its first SUV still looks very much like a Bentley; the strong rear haunch and the diamond grille on the nose are instantly recognisable.
+
+Like the firm’s Flying Spur and Continental GT, the Bentayga takes full advantage of Bentley's ownership by the Volkswagen Group. Beneath the Bentayga's imposing looks is essentially the same platform that underpins Audi’s flagship SUV, the Q7.</p>
+            </div>
+
+            <div>
+                /* UP767436 A simple form created to show how users could input data. */
+
+                <form action="/action_page.php">
+  Make:<br>
+  <input type="text" name="Make" value="Abarth   ">
+  <br>
+  Model:<br>
+  <input type="text" name="Model" value="124 Spider">
+  <br>
+ Comment:<br>
+  <input type="text" name="Enter Comment" value="   ">
+  <br>
+  <br>
+  <input type="submit" value="Submit">
+</form> 
+
+<p style="color:white;">Here on the newsfeed page you can submit your comment on other users posts or create your own.</p>
+            </div>
+        </article>
     </body>
 </html>
