--- a/front/account.html
+++ b/front/account.html
@@ -2,7 +2,7 @@
 /**
 * This is the Account page, containing a navigation bar at the bottom to go to the Newsfeed and Database of the application.
 *
-* @author  Matt Bishun, Jack Hickman, up767436
+* @author  UP812199, Jack Hickman, up767436
 * @version 1.0
 * @since   2018-03-10 
 */
