--- a/front/usersettings.html
+++ b/front/usersettings.html
@@ -2,7 +2,7 @@
 /**
 * This is the User settings page, containing various changes that can be done to the account user.
 *
-* @author  Matt Bishun
+* @author  UP812199
 * @version 1.0
 * @since   2018-03-10 
 */
