--- a/front/account.html
+++ b/front/account.html
@@ -38,7 +38,7 @@
                 <p>This is where the user's posts will go!</p>
             </div>
         </article>
-<!--        // A hyperlink is created to the User settings page.-->
+<!--        ////UP812199 - A hyperlink is created to the User settings page.-->
         <p class ="Hyplink">
         <a href="usersettings.html"> User Settings</a>
         </p>
