--- a/front/news.html
+++ b/front/news.html
@@ -10,10 +10,10 @@
             <a href="news.html" class="grid-item">News</a>
             <a href="database.html" class="grid-item">Database</a>
         </nav>
-        /* UP767436 Adds the blue line seperator, also makes room for the search box. */
+        <!--UP767436 Adds the blue line seperator, also makes room for the search box. /-->
         <header class="grid-container" style="border-bottom: 5px solid blue">
         <br>
-            /* UP767436 Creates search box by using a placeholder for text. */
+            <!--/* UP767436 Creates search box by using a placeholder for text. *-->
             <div>            <input type="text" placeholder="Search..">
             </div>
             </header>
@@ -26,7 +26,7 @@ Like the firm’s Flying Spur and Continental GT, the Bentayga takes full advant
             </div>
 
             <div>
-                /* UP767436 A simple form created to show how users could input data. */
+                <!-- UP767436 A simple form created to show how users could input data. */-->
 
                 <form action="/action_page.php">
   Make:<br>
